Front_end/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    LLAVEI
    LLAVED
    MOD
    RETURN
    CHAR
    STRING
    USES
    CONST

Grammar

Rule 0     S' -> ProgDef
Rule 1     ProgDef -> PROGRAM ID SEMICOLON SubProg ENDPOINT
Rule 2     SubProg -> VarDef label_declaration_part function_definition compound_statement
Rule 3     VarDef -> VAR VarDefList SEMICOLON
Rule 4     VarDefList -> VarDefList SEMICOLON VarDefState
Rule 5     VarDefList -> VarDefState
Rule 6     VarDefState -> VarList COLON Type
Rule 7     VarDefState -> ArrayDefState
Rule 8     VarList -> VarList COMMA Variable
Rule 9     VarList -> Variable
Rule 10    ArrayDefState -> TYPE arrayName EQ ARRAY LBRAC index_list RBRAC OF Type
Rule 11    arrayName -> ID
Rule 12    index_list -> index_list COMMA index
Rule 13    index_list -> index
Rule 14    index -> startIndex DOTDOT endIndex
Rule 15    Type -> INTEGER
Rule 16    Type -> REAL
Rule 17    Type -> BOOLEAN
Rule 18    Type -> arrayName
Rule 19    Variable -> ID
Rule 20    startIndex -> const
Rule 21    endIndex -> const
Rule 22    label_declaration_part -> LABEL label_list SEMICOLON
Rule 23    label_declaration_part -> empty
Rule 24    label_list -> label_list COMMA label
Rule 25    label_list -> label
Rule 26    StateList -> StateList SEMICOLON Statement
Rule 27    StateList -> Statement
Rule 28    Statement -> open_statement
Rule 29    Statement -> closed_statement
Rule 30    open_statement -> label COLON non_labeled_open_statement
Rule 31    open_statement -> non_labeled_open_statement
Rule 32    closed_statement -> label COLON non_labeled_closed_statement
Rule 33    closed_statement -> non_labeled_closed_statement
Rule 34    non_labeled_open_statement -> open_if_statement
Rule 35    non_labeled_open_statement -> open_while_statement
Rule 36    non_labeled_open_statement -> open_for_statement
Rule 37    non_labeled_closed_statement -> assignment_statement
Rule 38    non_labeled_closed_statement -> compound_statement
Rule 39    non_labeled_closed_statement -> closed_if_statement
Rule 40    non_labeled_closed_statement -> closed_while_statement
Rule 41    non_labeled_closed_statement -> closed_for_statement
Rule 42    non_labeled_closed_statement -> goto_statement
Rule 43    non_labeled_closed_statement -> empty
Rule 44    non_labeled_closed_statement -> case_statement
Rule 45    non_labeled_closed_statement -> continue_statement
Rule 46    continue_statement -> CONTINUE
Rule 47    non_labeled_closed_statement -> break_statement
Rule 48    break_statement -> BREAK
Rule 49    case_statement -> CASE case_index OF case_element_list END
Rule 50    case_statement -> CASE case_index OF case_element_list SEMICOLON END
Rule 51    case_index -> Expr
Rule 52    case_element_list -> case_element_list SEMICOLON case_element
Rule 53    case_element_list -> case_element
Rule 54    case_element -> case_constant COLON Statement
Rule 55    case_constant -> const
Rule 56    open_if_statement -> IF BoolExpr THEN Statement
Rule 57    open_if_statement -> IF BoolExpr THEN closed_statement ELSE open_statement
Rule 58    closed_if_statement -> IF BoolExpr THEN closed_statement ELSE closed_statement
Rule 59    open_while_statement -> WHILE BoolExpr DO open_statement
Rule 60    closed_while_statement -> WHILE BoolExpr DO closed_statement
Rule 61    open_for_statement -> FOR Variable ASSIGNMENT initial_value direction final_value DO open_statement
Rule 62    closed_for_statement -> FOR Variable ASSIGNMENT initial_value direction final_value DO closed_statement
Rule 63    initial_value -> Expr
Rule 64    final_value -> Expr
Rule 65    direction -> TO
Rule 66    direction -> DOWNTO
Rule 67    assignment_statement -> Variable ASSIGNMENT Expr
Rule 68    compound_statement -> BEGIN StateList END
Rule 69    goto_statement -> GOTO label
Rule 70    label -> DIGSEQ
Rule 71    Expr -> Expr PLUS Expr
Rule 72    Expr -> Expr MINUS Expr
Rule 73    Expr -> Expr TIMES Expr
Rule 74    Expr -> Expr DIVIDE Expr
Rule 75    Expr -> LPAREN Expr RPAREN
Rule 76    Expr -> MINUS Expr
Rule 77    Expr -> Variable
Rule 78    Expr -> const
Rule 79    const -> INT_NUMBER
Rule 80    const -> REAL_NUMBER
Rule 81    BoolExpr -> Expr LT Expr
Rule 82    BoolExpr -> Expr LE Expr
Rule 83    BoolExpr -> Expr GT Expr
Rule 84    BoolExpr -> Expr GE Expr
Rule 85    BoolExpr -> Expr EQ Expr
Rule 86    BoolExpr -> Expr NE Expr
Rule 87    BoolExpr -> BoolExpr AND BoolExpr
Rule 88    BoolExpr -> BoolExpr OR BoolExpr
Rule 89    BoolExpr -> NOT BoolExpr
Rule 90    BoolExpr -> LPAREN BoolExpr RPAREN
Rule 91    BoolExpr -> Expr
Rule 92    empty -> <empty>
Rule 93    function_definition -> function_heading SEMICOLON function_block
Rule 94    function_definition -> empty
Rule 95    function_heading -> FUNCTION funcName COLON return_type
Rule 96    function_heading -> FUNCTION funcName parameter_list COLON return_type
Rule 97    parameter_list -> LPAREN VarDefList RPAREN
Rule 98    funcName -> ID
Rule 99    return_type -> Type
Rule 100   function_block -> compound_statement

Terminals, with rules where they appear

AND                  : 87
ARRAY                : 10
ASSIGNMENT           : 61 62 67
BEGIN                : 68
BOOLEAN              : 17
BREAK                : 48
CASE                 : 49 50
CHAR                 : 
COLON                : 6 30 32 54 95 96
COMMA                : 8 12 24
CONST                : 
CONTINUE             : 46
DIGSEQ               : 70
DIVIDE               : 74
DO                   : 59 60 61 62
DOTDOT               : 14
DOWNTO               : 66
ELSE                 : 57 58
END                  : 49 50 68
ENDPOINT             : 1
EQ                   : 10 85
FOR                  : 61 62
FUNCTION             : 95 96
GE                   : 84
GOTO                 : 69
GT                   : 83
ID                   : 1 11 19 98
IF                   : 56 57 58
INTEGER              : 15
INT_NUMBER           : 79
LABEL                : 22
LBRAC                : 10
LE                   : 82
LLAVED               : 
LLAVEI               : 
LPAREN               : 75 90 97
LT                   : 81
MINUS                : 72 76
MOD                  : 
NE                   : 86
NOT                  : 89
OF                   : 10 49 50
OR                   : 88
PLUS                 : 71
PROGRAM              : 1
RBRAC                : 10
REAL                 : 16
REAL_NUMBER          : 80
RETURN               : 
RPAREN               : 75 90 97
SEMICOLON            : 1 3 4 22 26 50 52 93
STRING               : 
THEN                 : 56 57 58
TIMES                : 73
TO                   : 65
TYPE                 : 10
USES                 : 
VAR                  : 3
WHILE                : 59 60
error                : 

Nonterminals, with rules where they appear

ArrayDefState        : 7
BoolExpr             : 56 57 58 59 60 87 87 88 88 89 90
Expr                 : 51 63 64 67 71 71 72 72 73 73 74 74 75 76 81 81 82 82 83 83 84 84 85 85 86 86 91
ProgDef              : 0
StateList            : 26 68
Statement            : 26 27 54 56
SubProg              : 1
Type                 : 6 10 99
VarDef               : 2
VarDefList           : 3 4 97
VarDefState          : 4 5
VarList              : 6 8
Variable             : 8 9 61 62 67 77
arrayName            : 10 18
assignment_statement : 37
break_statement      : 47
case_constant        : 54
case_element         : 52 53
case_element_list    : 49 50 52
case_index           : 49 50
case_statement       : 44
closed_for_statement : 41
closed_if_statement  : 39
closed_statement     : 29 57 58 58 60 62
closed_while_statement : 40
compound_statement   : 2 38 100
const                : 20 21 55 78
continue_statement   : 45
direction            : 61 62
empty                : 23 43 94
endIndex             : 14
final_value          : 61 62
funcName             : 95 96
function_block       : 93
function_definition  : 2
function_heading     : 93
goto_statement       : 42
index                : 12 13
index_list           : 10 12
initial_value        : 61 62
label                : 24 25 30 32 69
label_declaration_part : 2
label_list           : 22 24
non_labeled_closed_statement : 32 33
non_labeled_open_statement : 30 31
open_for_statement   : 36
open_if_statement    : 34
open_statement       : 28 57 59 61
open_while_statement : 35
parameter_list       : 96
return_type          : 95 96
startIndex           : 14

Parsing method: LALR

state 0

    (0) S' -> . ProgDef
    (1) ProgDef -> . PROGRAM ID SEMICOLON SubProg ENDPOINT

    PROGRAM         shift and go to state 2

    ProgDef                        shift and go to state 1

state 1

    (0) S' -> ProgDef .



state 2

    (1) ProgDef -> PROGRAM . ID SEMICOLON SubProg ENDPOINT

    ID              shift and go to state 3


state 3

    (1) ProgDef -> PROGRAM ID . SEMICOLON SubProg ENDPOINT

    SEMICOLON       shift and go to state 4


state 4

    (1) ProgDef -> PROGRAM ID SEMICOLON . SubProg ENDPOINT
    (2) SubProg -> . VarDef label_declaration_part function_definition compound_statement
    (3) VarDef -> . VAR VarDefList SEMICOLON

    VAR             shift and go to state 7

    SubProg                        shift and go to state 5
    VarDef                         shift and go to state 6

state 5

    (1) ProgDef -> PROGRAM ID SEMICOLON SubProg . ENDPOINT

    ENDPOINT        shift and go to state 8


state 6

    (2) SubProg -> VarDef . label_declaration_part function_definition compound_statement
    (22) label_declaration_part -> . LABEL label_list SEMICOLON
    (23) label_declaration_part -> . empty
    (92) empty -> .

    LABEL           shift and go to state 10
    FUNCTION        reduce using rule 92 (empty -> .)
    BEGIN           reduce using rule 92 (empty -> .)

    label_declaration_part         shift and go to state 9
    empty                          shift and go to state 11

state 7

    (3) VarDef -> VAR . VarDefList SEMICOLON
    (4) VarDefList -> . VarDefList SEMICOLON VarDefState
    (5) VarDefList -> . VarDefState
    (6) VarDefState -> . VarList COLON Type
    (7) VarDefState -> . ArrayDefState
    (8) VarList -> . VarList COMMA Variable
    (9) VarList -> . Variable
    (10) ArrayDefState -> . TYPE arrayName EQ ARRAY LBRAC index_list RBRAC OF Type
    (19) Variable -> . ID

    TYPE            shift and go to state 17
    ID              shift and go to state 18

    VarDefList                     shift and go to state 12
    VarDefState                    shift and go to state 13
    VarList                        shift and go to state 14
    ArrayDefState                  shift and go to state 15
    Variable                       shift and go to state 16

state 8

    (1) ProgDef -> PROGRAM ID SEMICOLON SubProg ENDPOINT .

    $end            reduce using rule 1 (ProgDef -> PROGRAM ID SEMICOLON SubProg ENDPOINT .)


state 9

    (2) SubProg -> VarDef label_declaration_part . function_definition compound_statement
    (93) function_definition -> . function_heading SEMICOLON function_block
    (94) function_definition -> . empty
    (95) function_heading -> . FUNCTION funcName COLON return_type
    (96) function_heading -> . FUNCTION funcName parameter_list COLON return_type
    (92) empty -> .

    FUNCTION        shift and go to state 22
    BEGIN           reduce using rule 92 (empty -> .)

    function_definition            shift and go to state 19
    function_heading               shift and go to state 20
    empty                          shift and go to state 21

state 10

    (22) label_declaration_part -> LABEL . label_list SEMICOLON
    (24) label_list -> . label_list COMMA label
    (25) label_list -> . label
    (70) label -> . DIGSEQ

    DIGSEQ          shift and go to state 25

    label_list                     shift and go to state 23
    label                          shift and go to state 24

state 11

    (23) label_declaration_part -> empty .

    FUNCTION        reduce using rule 23 (label_declaration_part -> empty .)
    BEGIN           reduce using rule 23 (label_declaration_part -> empty .)


state 12

    (3) VarDef -> VAR VarDefList . SEMICOLON
    (4) VarDefList -> VarDefList . SEMICOLON VarDefState

    SEMICOLON       shift and go to state 26


state 13

    (5) VarDefList -> VarDefState .

    SEMICOLON       reduce using rule 5 (VarDefList -> VarDefState .)
    RPAREN          reduce using rule 5 (VarDefList -> VarDefState .)


state 14

    (6) VarDefState -> VarList . COLON Type
    (8) VarList -> VarList . COMMA Variable

    COLON           shift and go to state 27
    COMMA           shift and go to state 28


state 15

    (7) VarDefState -> ArrayDefState .

    SEMICOLON       reduce using rule 7 (VarDefState -> ArrayDefState .)
    RPAREN          reduce using rule 7 (VarDefState -> ArrayDefState .)


state 16

    (9) VarList -> Variable .

    COLON           reduce using rule 9 (VarList -> Variable .)
    COMMA           reduce using rule 9 (VarList -> Variable .)


state 17

    (10) ArrayDefState -> TYPE . arrayName EQ ARRAY LBRAC index_list RBRAC OF Type
    (11) arrayName -> . ID

    ID              shift and go to state 30

    arrayName                      shift and go to state 29

state 18

    (19) Variable -> ID .

    COLON           reduce using rule 19 (Variable -> ID .)
    COMMA           reduce using rule 19 (Variable -> ID .)
    ASSIGNMENT      reduce using rule 19 (Variable -> ID .)
    LT              reduce using rule 19 (Variable -> ID .)
    LE              reduce using rule 19 (Variable -> ID .)
    GT              reduce using rule 19 (Variable -> ID .)
    GE              reduce using rule 19 (Variable -> ID .)
    EQ              reduce using rule 19 (Variable -> ID .)
    NE              reduce using rule 19 (Variable -> ID .)
    PLUS            reduce using rule 19 (Variable -> ID .)
    MINUS           reduce using rule 19 (Variable -> ID .)
    TIMES           reduce using rule 19 (Variable -> ID .)
    DIVIDE          reduce using rule 19 (Variable -> ID .)
    THEN            reduce using rule 19 (Variable -> ID .)
    AND             reduce using rule 19 (Variable -> ID .)
    OR              reduce using rule 19 (Variable -> ID .)
    DO              reduce using rule 19 (Variable -> ID .)
    OF              reduce using rule 19 (Variable -> ID .)
    RPAREN          reduce using rule 19 (Variable -> ID .)
    END             reduce using rule 19 (Variable -> ID .)
    SEMICOLON       reduce using rule 19 (Variable -> ID .)
    ELSE            reduce using rule 19 (Variable -> ID .)
    TO              reduce using rule 19 (Variable -> ID .)
    DOWNTO          reduce using rule 19 (Variable -> ID .)


state 19

    (2) SubProg -> VarDef label_declaration_part function_definition . compound_statement
    (68) compound_statement -> . BEGIN StateList END

    BEGIN           shift and go to state 32

    compound_statement             shift and go to state 31

state 20

    (93) function_definition -> function_heading . SEMICOLON function_block

    SEMICOLON       shift and go to state 33


state 21

    (94) function_definition -> empty .

    BEGIN           reduce using rule 94 (function_definition -> empty .)


state 22

    (95) function_heading -> FUNCTION . funcName COLON return_type
    (96) function_heading -> FUNCTION . funcName parameter_list COLON return_type
    (98) funcName -> . ID

    ID              shift and go to state 35

    funcName                       shift and go to state 34

state 23

    (22) label_declaration_part -> LABEL label_list . SEMICOLON
    (24) label_list -> label_list . COMMA label

    SEMICOLON       shift and go to state 36
    COMMA           shift and go to state 37


state 24

    (25) label_list -> label .

    SEMICOLON       reduce using rule 25 (label_list -> label .)
    COMMA           reduce using rule 25 (label_list -> label .)


state 25

    (70) label -> DIGSEQ .

    SEMICOLON       reduce using rule 70 (label -> DIGSEQ .)
    COMMA           reduce using rule 70 (label -> DIGSEQ .)
    COLON           reduce using rule 70 (label -> DIGSEQ .)
    END             reduce using rule 70 (label -> DIGSEQ .)
    ELSE            reduce using rule 70 (label -> DIGSEQ .)


state 26

    (3) VarDef -> VAR VarDefList SEMICOLON .
    (4) VarDefList -> VarDefList SEMICOLON . VarDefState
    (6) VarDefState -> . VarList COLON Type
    (7) VarDefState -> . ArrayDefState
    (8) VarList -> . VarList COMMA Variable
    (9) VarList -> . Variable
    (10) ArrayDefState -> . TYPE arrayName EQ ARRAY LBRAC index_list RBRAC OF Type
    (19) Variable -> . ID

    LABEL           reduce using rule 3 (VarDef -> VAR VarDefList SEMICOLON .)
    FUNCTION        reduce using rule 3 (VarDef -> VAR VarDefList SEMICOLON .)
    BEGIN           reduce using rule 3 (VarDef -> VAR VarDefList SEMICOLON .)
    TYPE            shift and go to state 17
    ID              shift and go to state 18

    VarDefState                    shift and go to state 38
    VarList                        shift and go to state 14
    ArrayDefState                  shift and go to state 15
    Variable                       shift and go to state 16

state 27

    (6) VarDefState -> VarList COLON . Type
    (15) Type -> . INTEGER
    (16) Type -> . REAL
    (17) Type -> . BOOLEAN
    (18) Type -> . arrayName
    (11) arrayName -> . ID

    INTEGER         shift and go to state 40
    REAL            shift and go to state 41
    BOOLEAN         shift and go to state 42
    ID              shift and go to state 30

    Type                           shift and go to state 39
    arrayName                      shift and go to state 43

state 28

    (8) VarList -> VarList COMMA . Variable
    (19) Variable -> . ID

    ID              shift and go to state 18

    Variable                       shift and go to state 44

state 29

    (10) ArrayDefState -> TYPE arrayName . EQ ARRAY LBRAC index_list RBRAC OF Type

    EQ              shift and go to state 45


state 30

    (11) arrayName -> ID .

    EQ              reduce using rule 11 (arrayName -> ID .)
    SEMICOLON       reduce using rule 11 (arrayName -> ID .)
    RPAREN          reduce using rule 11 (arrayName -> ID .)


state 31

    (2) SubProg -> VarDef label_declaration_part function_definition compound_statement .

    ENDPOINT        reduce using rule 2 (SubProg -> VarDef label_declaration_part function_definition compound_statement .)


state 32

    (68) compound_statement -> BEGIN . StateList END
    (26) StateList -> . StateList SEMICOLON Statement
    (27) StateList -> . Statement
    (28) Statement -> . open_statement
    (29) Statement -> . closed_statement
    (30) open_statement -> . label COLON non_labeled_open_statement
    (31) open_statement -> . non_labeled_open_statement
    (32) closed_statement -> . label COLON non_labeled_closed_statement
    (33) closed_statement -> . non_labeled_closed_statement
    (70) label -> . DIGSEQ
    (34) non_labeled_open_statement -> . open_if_statement
    (35) non_labeled_open_statement -> . open_while_statement
    (36) non_labeled_open_statement -> . open_for_statement
    (37) non_labeled_closed_statement -> . assignment_statement
    (38) non_labeled_closed_statement -> . compound_statement
    (39) non_labeled_closed_statement -> . closed_if_statement
    (40) non_labeled_closed_statement -> . closed_while_statement
    (41) non_labeled_closed_statement -> . closed_for_statement
    (42) non_labeled_closed_statement -> . goto_statement
    (43) non_labeled_closed_statement -> . empty
    (44) non_labeled_closed_statement -> . case_statement
    (45) non_labeled_closed_statement -> . continue_statement
    (47) non_labeled_closed_statement -> . break_statement
    (56) open_if_statement -> . IF BoolExpr THEN Statement
    (57) open_if_statement -> . IF BoolExpr THEN closed_statement ELSE open_statement
    (59) open_while_statement -> . WHILE BoolExpr DO open_statement
    (61) open_for_statement -> . FOR Variable ASSIGNMENT initial_value direction final_value DO open_statement
    (67) assignment_statement -> . Variable ASSIGNMENT Expr
    (68) compound_statement -> . BEGIN StateList END
    (58) closed_if_statement -> . IF BoolExpr THEN closed_statement ELSE closed_statement
    (60) closed_while_statement -> . WHILE BoolExpr DO closed_statement
    (62) closed_for_statement -> . FOR Variable ASSIGNMENT initial_value direction final_value DO closed_statement
    (69) goto_statement -> . GOTO label
    (92) empty -> .
    (49) case_statement -> . CASE case_index OF case_element_list END
    (50) case_statement -> . CASE case_index OF case_element_list SEMICOLON END
    (46) continue_statement -> . CONTINUE
    (48) break_statement -> . BREAK
    (19) Variable -> . ID

    DIGSEQ          shift and go to state 25
    IF              shift and go to state 66
    WHILE           shift and go to state 67
    FOR             shift and go to state 68
    BEGIN           shift and go to state 32
    GOTO            shift and go to state 70
    END             reduce using rule 92 (empty -> .)
    SEMICOLON       reduce using rule 92 (empty -> .)
    CASE            shift and go to state 71
    CONTINUE        shift and go to state 72
    BREAK           shift and go to state 73
    ID              shift and go to state 18

    StateList                      shift and go to state 46
    Statement                      shift and go to state 47
    open_statement                 shift and go to state 48
    closed_statement               shift and go to state 49
    label                          shift and go to state 50
    non_labeled_open_statement     shift and go to state 51
    non_labeled_closed_statement   shift and go to state 52
    open_if_statement              shift and go to state 53
    open_while_statement           shift and go to state 54
    open_for_statement             shift and go to state 55
    assignment_statement           shift and go to state 56
    compound_statement             shift and go to state 57
    closed_if_statement            shift and go to state 58
    closed_while_statement         shift and go to state 59
    closed_for_statement           shift and go to state 60
    goto_statement                 shift and go to state 61
    empty                          shift and go to state 62
    case_statement                 shift and go to state 63
    continue_statement             shift and go to state 64
    break_statement                shift and go to state 65
    Variable                       shift and go to state 69

state 33

    (93) function_definition -> function_heading SEMICOLON . function_block
    (100) function_block -> . compound_statement
    (68) compound_statement -> . BEGIN StateList END

    BEGIN           shift and go to state 32

    function_block                 shift and go to state 74
    compound_statement             shift and go to state 75

state 34

    (95) function_heading -> FUNCTION funcName . COLON return_type
    (96) function_heading -> FUNCTION funcName . parameter_list COLON return_type
    (97) parameter_list -> . LPAREN VarDefList RPAREN

    COLON           shift and go to state 76
    LPAREN          shift and go to state 78

    parameter_list                 shift and go to state 77

state 35

    (98) funcName -> ID .

    COLON           reduce using rule 98 (funcName -> ID .)
    LPAREN          reduce using rule 98 (funcName -> ID .)


state 36

    (22) label_declaration_part -> LABEL label_list SEMICOLON .

    FUNCTION        reduce using rule 22 (label_declaration_part -> LABEL label_list SEMICOLON .)
    BEGIN           reduce using rule 22 (label_declaration_part -> LABEL label_list SEMICOLON .)


state 37

    (24) label_list -> label_list COMMA . label
    (70) label -> . DIGSEQ

    DIGSEQ          shift and go to state 25

    label                          shift and go to state 79

state 38

    (4) VarDefList -> VarDefList SEMICOLON VarDefState .

    SEMICOLON       reduce using rule 4 (VarDefList -> VarDefList SEMICOLON VarDefState .)
    RPAREN          reduce using rule 4 (VarDefList -> VarDefList SEMICOLON VarDefState .)


state 39

    (6) VarDefState -> VarList COLON Type .

    SEMICOLON       reduce using rule 6 (VarDefState -> VarList COLON Type .)
    RPAREN          reduce using rule 6 (VarDefState -> VarList COLON Type .)


state 40

    (15) Type -> INTEGER .

    SEMICOLON       reduce using rule 15 (Type -> INTEGER .)
    RPAREN          reduce using rule 15 (Type -> INTEGER .)


state 41

    (16) Type -> REAL .

    SEMICOLON       reduce using rule 16 (Type -> REAL .)
    RPAREN          reduce using rule 16 (Type -> REAL .)


state 42

    (17) Type -> BOOLEAN .

    SEMICOLON       reduce using rule 17 (Type -> BOOLEAN .)
    RPAREN          reduce using rule 17 (Type -> BOOLEAN .)


state 43

    (18) Type -> arrayName .

    SEMICOLON       reduce using rule 18 (Type -> arrayName .)
    RPAREN          reduce using rule 18 (Type -> arrayName .)


state 44

    (8) VarList -> VarList COMMA Variable .

    COLON           reduce using rule 8 (VarList -> VarList COMMA Variable .)
    COMMA           reduce using rule 8 (VarList -> VarList COMMA Variable .)


state 45

    (10) ArrayDefState -> TYPE arrayName EQ . ARRAY LBRAC index_list RBRAC OF Type

    ARRAY           shift and go to state 80


state 46

    (68) compound_statement -> BEGIN StateList . END
    (26) StateList -> StateList . SEMICOLON Statement

    END             shift and go to state 81
    SEMICOLON       shift and go to state 82


state 47

    (27) StateList -> Statement .

    END             reduce using rule 27 (StateList -> Statement .)
    SEMICOLON       reduce using rule 27 (StateList -> Statement .)


state 48

    (28) Statement -> open_statement .

    END             reduce using rule 28 (Statement -> open_statement .)
    SEMICOLON       reduce using rule 28 (Statement -> open_statement .)


state 49

    (29) Statement -> closed_statement .

    END             reduce using rule 29 (Statement -> closed_statement .)
    SEMICOLON       reduce using rule 29 (Statement -> closed_statement .)


state 50

    (30) open_statement -> label . COLON non_labeled_open_statement
    (32) closed_statement -> label . COLON non_labeled_closed_statement

    COLON           shift and go to state 83


state 51

    (31) open_statement -> non_labeled_open_statement .

    END             reduce using rule 31 (open_statement -> non_labeled_open_statement .)
    SEMICOLON       reduce using rule 31 (open_statement -> non_labeled_open_statement .)


state 52

    (33) closed_statement -> non_labeled_closed_statement .

    END             reduce using rule 33 (closed_statement -> non_labeled_closed_statement .)
    SEMICOLON       reduce using rule 33 (closed_statement -> non_labeled_closed_statement .)
    ELSE            reduce using rule 33 (closed_statement -> non_labeled_closed_statement .)


state 53

    (34) non_labeled_open_statement -> open_if_statement .

    END             reduce using rule 34 (non_labeled_open_statement -> open_if_statement .)
    SEMICOLON       reduce using rule 34 (non_labeled_open_statement -> open_if_statement .)


state 54

    (35) non_labeled_open_statement -> open_while_statement .

    END             reduce using rule 35 (non_labeled_open_statement -> open_while_statement .)
    SEMICOLON       reduce using rule 35 (non_labeled_open_statement -> open_while_statement .)


state 55

    (36) non_labeled_open_statement -> open_for_statement .

    END             reduce using rule 36 (non_labeled_open_statement -> open_for_statement .)
    SEMICOLON       reduce using rule 36 (non_labeled_open_statement -> open_for_statement .)


state 56

    (37) non_labeled_closed_statement -> assignment_statement .

    END             reduce using rule 37 (non_labeled_closed_statement -> assignment_statement .)
    SEMICOLON       reduce using rule 37 (non_labeled_closed_statement -> assignment_statement .)
    ELSE            reduce using rule 37 (non_labeled_closed_statement -> assignment_statement .)


state 57

    (38) non_labeled_closed_statement -> compound_statement .

    END             reduce using rule 38 (non_labeled_closed_statement -> compound_statement .)
    SEMICOLON       reduce using rule 38 (non_labeled_closed_statement -> compound_statement .)
    ELSE            reduce using rule 38 (non_labeled_closed_statement -> compound_statement .)


state 58

    (39) non_labeled_closed_statement -> closed_if_statement .

    END             reduce using rule 39 (non_labeled_closed_statement -> closed_if_statement .)
    SEMICOLON       reduce using rule 39 (non_labeled_closed_statement -> closed_if_statement .)
    ELSE            reduce using rule 39 (non_labeled_closed_statement -> closed_if_statement .)


state 59

    (40) non_labeled_closed_statement -> closed_while_statement .

    END             reduce using rule 40 (non_labeled_closed_statement -> closed_while_statement .)
    SEMICOLON       reduce using rule 40 (non_labeled_closed_statement -> closed_while_statement .)
    ELSE            reduce using rule 40 (non_labeled_closed_statement -> closed_while_statement .)


state 60

    (41) non_labeled_closed_statement -> closed_for_statement .

    END             reduce using rule 41 (non_labeled_closed_statement -> closed_for_statement .)
    SEMICOLON       reduce using rule 41 (non_labeled_closed_statement -> closed_for_statement .)
    ELSE            reduce using rule 41 (non_labeled_closed_statement -> closed_for_statement .)


state 61

    (42) non_labeled_closed_statement -> goto_statement .

    END             reduce using rule 42 (non_labeled_closed_statement -> goto_statement .)
    SEMICOLON       reduce using rule 42 (non_labeled_closed_statement -> goto_statement .)
    ELSE            reduce using rule 42 (non_labeled_closed_statement -> goto_statement .)


state 62

    (43) non_labeled_closed_statement -> empty .

    END             reduce using rule 43 (non_labeled_closed_statement -> empty .)
    SEMICOLON       reduce using rule 43 (non_labeled_closed_statement -> empty .)
    ELSE            reduce using rule 43 (non_labeled_closed_statement -> empty .)


state 63

    (44) non_labeled_closed_statement -> case_statement .

    END             reduce using rule 44 (non_labeled_closed_statement -> case_statement .)
    SEMICOLON       reduce using rule 44 (non_labeled_closed_statement -> case_statement .)
    ELSE            reduce using rule 44 (non_labeled_closed_statement -> case_statement .)


state 64

    (45) non_labeled_closed_statement -> continue_statement .

    END             reduce using rule 45 (non_labeled_closed_statement -> continue_statement .)
    SEMICOLON       reduce using rule 45 (non_labeled_closed_statement -> continue_statement .)
    ELSE            reduce using rule 45 (non_labeled_closed_statement -> continue_statement .)


state 65

    (47) non_labeled_closed_statement -> break_statement .

    END             reduce using rule 47 (non_labeled_closed_statement -> break_statement .)
    SEMICOLON       reduce using rule 47 (non_labeled_closed_statement -> break_statement .)
    ELSE            reduce using rule 47 (non_labeled_closed_statement -> break_statement .)


state 66

    (56) open_if_statement -> IF . BoolExpr THEN Statement
    (57) open_if_statement -> IF . BoolExpr THEN closed_statement ELSE open_statement
    (58) closed_if_statement -> IF . BoolExpr THEN closed_statement ELSE closed_statement
    (81) BoolExpr -> . Expr LT Expr
    (82) BoolExpr -> . Expr LE Expr
    (83) BoolExpr -> . Expr GT Expr
    (84) BoolExpr -> . Expr GE Expr
    (85) BoolExpr -> . Expr EQ Expr
    (86) BoolExpr -> . Expr NE Expr
    (87) BoolExpr -> . BoolExpr AND BoolExpr
    (88) BoolExpr -> . BoolExpr OR BoolExpr
    (89) BoolExpr -> . NOT BoolExpr
    (90) BoolExpr -> . LPAREN BoolExpr RPAREN
    (91) BoolExpr -> . Expr
    (71) Expr -> . Expr PLUS Expr
    (72) Expr -> . Expr MINUS Expr
    (73) Expr -> . Expr TIMES Expr
    (74) Expr -> . Expr DIVIDE Expr
    (75) Expr -> . LPAREN Expr RPAREN
    (76) Expr -> . MINUS Expr
    (77) Expr -> . Variable
    (78) Expr -> . const
    (19) Variable -> . ID
    (79) const -> . INT_NUMBER
    (80) const -> . REAL_NUMBER

    NOT             shift and go to state 86
    LPAREN          shift and go to state 87
    MINUS           shift and go to state 88
    ID              shift and go to state 18
    INT_NUMBER      shift and go to state 91
    REAL_NUMBER     shift and go to state 92

    BoolExpr                       shift and go to state 84
    Expr                           shift and go to state 85
    Variable                       shift and go to state 89
    const                          shift and go to state 90

state 67

    (59) open_while_statement -> WHILE . BoolExpr DO open_statement
    (60) closed_while_statement -> WHILE . BoolExpr DO closed_statement
    (81) BoolExpr -> . Expr LT Expr
    (82) BoolExpr -> . Expr LE Expr
    (83) BoolExpr -> . Expr GT Expr
    (84) BoolExpr -> . Expr GE Expr
    (85) BoolExpr -> . Expr EQ Expr
    (86) BoolExpr -> . Expr NE Expr
    (87) BoolExpr -> . BoolExpr AND BoolExpr
    (88) BoolExpr -> . BoolExpr OR BoolExpr
    (89) BoolExpr -> . NOT BoolExpr
    (90) BoolExpr -> . LPAREN BoolExpr RPAREN
    (91) BoolExpr -> . Expr
    (71) Expr -> . Expr PLUS Expr
    (72) Expr -> . Expr MINUS Expr
    (73) Expr -> . Expr TIMES Expr
    (74) Expr -> . Expr DIVIDE Expr
    (75) Expr -> . LPAREN Expr RPAREN
    (76) Expr -> . MINUS Expr
    (77) Expr -> . Variable
    (78) Expr -> . const
    (19) Variable -> . ID
    (79) const -> . INT_NUMBER
    (80) const -> . REAL_NUMBER

    NOT             shift and go to state 86
    LPAREN          shift and go to state 87
    MINUS           shift and go to state 88
    ID              shift and go to state 18
    INT_NUMBER      shift and go to state 91
    REAL_NUMBER     shift and go to state 92

    BoolExpr                       shift and go to state 93
    Expr                           shift and go to state 85
    Variable                       shift and go to state 89
    const                          shift and go to state 90

state 68

    (61) open_for_statement -> FOR . Variable ASSIGNMENT initial_value direction final_value DO open_statement
    (62) closed_for_statement -> FOR . Variable ASSIGNMENT initial_value direction final_value DO closed_statement
    (19) Variable -> . ID

    ID              shift and go to state 18

    Variable                       shift and go to state 94

state 69

    (67) assignment_statement -> Variable . ASSIGNMENT Expr

    ASSIGNMENT      shift and go to state 95


state 70

    (69) goto_statement -> GOTO . label
    (70) label -> . DIGSEQ

    DIGSEQ          shift and go to state 25

    label                          shift and go to state 96

state 71

    (49) case_statement -> CASE . case_index OF case_element_list END
    (50) case_statement -> CASE . case_index OF case_element_list SEMICOLON END
    (51) case_index -> . Expr
    (71) Expr -> . Expr PLUS Expr
    (72) Expr -> . Expr MINUS Expr
    (73) Expr -> . Expr TIMES Expr
    (74) Expr -> . Expr DIVIDE Expr
    (75) Expr -> . LPAREN Expr RPAREN
    (76) Expr -> . MINUS Expr
    (77) Expr -> . Variable
    (78) Expr -> . const
    (19) Variable -> . ID
    (79) const -> . INT_NUMBER
    (80) const -> . REAL_NUMBER

    LPAREN          shift and go to state 99
    MINUS           shift and go to state 88
    ID              shift and go to state 18
    INT_NUMBER      shift and go to state 91
    REAL_NUMBER     shift and go to state 92
